# dir-git-repo-scanner

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
scripts/: benchmark.py
